--- a/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/departs-view.fxml
+++ b/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/departs-view.fxml
@@ -1,28 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="557.0" prefWidth="846.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.skaayz.gsb_medecin_mac.controllers.DepartementController">
-   <children>
-      <TableView id="tableView" fx:id="tableView" prefHeight="557.0" prefWidth="846.0" styleClass="tableView" stylesheets="@../../css/app.css">
-         <columns>
-            <TableColumn id="col" fx:id="id" prefWidth="75.0" text="#">
-               <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
-            </TableColumn>
-            <TableColumn id="col" fx:id="libelle" prefWidth="142.0" text="Nom du département">
-               <cellValueFactory><PropertyValueFactory property="libelle" /></cellValueFactory>
-            </TableColumn>
-            <TableColumn id="col" fx:id="pays_id" prefWidth="142.0" text="Nom du pays">
-               <cellValueFactory><PropertyValueFactory property="pays_id" /></cellValueFactory>
-            </TableColumn>
-            <TableColumn id="col" fx:id="action" prefWidth="150.0" text=""/>
-         </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-   </children>
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="557.0" prefWidth="846.0"
+            xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="fr.skaayz.gsb_medecin_mac.controllers.DepartementController">
+   <TableView id="tableView" fx:id="tableView" layoutY="37.0" prefHeight="520.0" prefWidth="846.0"
+              styleClass="tableView" stylesheets="@../../css/app.css">
+      <columns>
+         <TableColumn id="col" fx:id="id" prefWidth="75.0" text="#">
+            <cellValueFactory>
+               <PropertyValueFactory property="id"/>
+            </cellValueFactory>
+         </TableColumn>
+         <TableColumn id="col" fx:id="libelle" prefWidth="142.0" text="Nom du département">
+            <cellValueFactory>
+               <PropertyValueFactory property="libelle"/>
+            </cellValueFactory>
+         </TableColumn>
+         <TableColumn id="col" fx:id="pays" prefWidth="142.0" text="Nom du pays">
+            <cellValueFactory>
+               <PropertyValueFactory property="pays"/>
+            </cellValueFactory>
+         </TableColumn>
+         <TableColumn id="col" fx:id="action" prefWidth="150.0" text=""/>
+      </columns>
+      <columnResizePolicy>
+         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+      </columnResizePolicy>
+   </TableView>
+   <TextField fx:id="search_textbar" layoutX="95.0" layoutY="5.0" prefHeight="27.0" prefWidth="616.0"
+              promptText="Rechercher un département.." style="-fx-font-size: 13;" stylesheets="@../../css/app.css"/>
+   <Button fx:id="search_button" layoutX="713.0" layoutY="5.0" minHeight="-Infinity" mnemonicParsing="false"
+           onAction="#searchButtonClicked" prefHeight="25.0" prefWidth="133.0" style="-fx-font-size: 13;"
+           styleClass="button-blue" stylesheets="@../../css/app.css" text="Rechercher"/>
+   <Button fx:id="add_button" layoutX="-1.0" layoutY="5.0" minHeight="-Infinity" mnemonicParsing="false"
+           onAction="#addButtonClicked" prefHeight="25.0" prefWidth="94.0" style="-fx-font-size: 13;"
+           styleClass="button-validate" stylesheets="@../../css/app.css" text="+ Ajouter">
+      <cursor>
+         <Cursor fx:constant="HAND"/>
+      </cursor>
+   </Button>
 </AnchorPane>
