--- a/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/popups/infos/medic-view.fxml
+++ b/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/popups/infos/medic-view.fxml
@@ -9,44 +9,58 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="499.0" prefWidth="598.0" style="-fx-background-radius: 10; -fx-background-color: #EEEEEEFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.skaayz.gsb_medecin_mac.controllers.medecins.EditController">
-   <children>
-      <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="89.0" prefWidth="598.0" style="-fx-background-radius: 0; -fx-background-color: #336ccf;">
-         <children>
-            <Label layoutX="25.0" layoutY="25.0" style="-fx-font-size: 28;" styleClass="nunito-bold" stylesheets="@../../../../css/app.css" text="Profil du médecin" textFill="WHITE" />
-            <Button fx:id="medic_close_button" layoutX="516.0" layoutY="16.0" mnemonicParsing="false" onAction="#closeButtonClicked" styleClass="button-transparent" stylesheets="@../../../../css/app.css">
-               <graphic>
-                  <ImageView fitHeight="46.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../assets/icons/close.png" />
-                     </image>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </ImageView>
-               </graphic>
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="499.0" prefWidth="598.0"
+            style="-fx-background-radius: 10; -fx-background-color: #EEEEEEFF;" xmlns="http://javafx.com/javafx/17"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="fr.skaayz.gsb_medecin_mac.controllers.medecins.EditController">
+   <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="89.0" prefWidth="598.0"
+               style="-fx-background-radius: 0; -fx-background-color: #336ccf;">
+      <Label layoutX="25.0" layoutY="25.0" style="-fx-font-size: 28;" styleClass="nunito-bold"
+             stylesheets="@../../../../css/app.css" text="Fiche d'information du médecin" textFill="WHITE"/>
+      <Button fx:id="medic_close_button" layoutX="516.0" layoutY="16.0" mnemonicParsing="false"
+              onAction="#closeButtonClicked" styleClass="button-transparent" stylesheets="@../../../../css/app.css">
+         <graphic>
+            <ImageView fitHeight="46.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
                <cursor>
-                  <Cursor fx:constant="HAND" />
+                  <Cursor fx:constant="HAND"/>
                </cursor>
-            </Button>
-         </children>
-      </AnchorPane>
-      <TextField fx:id="medic_textfield_id" disable="true" layoutX="27.0" layoutY="115.0" prefHeight="34.0" prefWidth="544.0" style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css" text="medic_identifier" />
-      <TextField fx:id="medic_textfield_firstname" layoutX="27.0" layoutY="158.0" prefHeight="34.0" prefWidth="544.0" style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css" text="medic_firstname" />
-      <TextField fx:id="medic_textfield_lastname" layoutX="27.0" layoutY="201.0" prefHeight="34.0" prefWidth="544.0" style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css" text="medic_lastname" />
-      <TextField fx:id="medic_textfield_address" layoutX="27.0" layoutY="244.0" prefHeight="34.0" prefWidth="544.0" style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css" text="medic_address" />
-      <TextField fx:id="medic_textfield_phone" layoutX="27.0" layoutY="287.0" prefHeight="34.0" prefWidth="544.0" style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css" text="medic_phone" />
-      <Button layoutX="27.0" layoutY="422.0" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="53.0" prefWidth="234.0" styleClass="button-delete" stylesheets="@../../../../css/app.css" text="Supprimer">
+               <Image url="@../../../../assets/icons/close.png"/>
+            </ImageView>
+         </graphic>
          <cursor>
-            <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="HAND"/>
          </cursor>
       </Button>
-      <Button layoutX="337.0" layoutY="422.0" mnemonicParsing="false" onAction="#validateButtonClicked" prefHeight="53.0" prefWidth="234.0" styleClass="button-validate" stylesheets="@../../../../css/app.css" text="Valider">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <ComboBox fx:id="medic_choice_speciality" layoutX="27.0" layoutY="329.0" prefHeight="34.0" prefWidth="544.0" style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css" />
-      <ComboBox fx:id="medic_choice_department" layoutX="27.0" layoutY="371.0" prefHeight="34.0" prefWidth="544.0" style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css" />
-   </children>
+   </AnchorPane>
+   <TextField fx:id="medic_textfield_id" disable="true" layoutX="27.0" layoutY="115.0" prefHeight="34.0"
+              prefWidth="544.0" style="-fx-font-size: 16;" styleClass="nunito-regular"
+              stylesheets="@../../../../css/app.css" text="medic_identifier"/>
+   <TextField fx:id="medic_textfield_firstname" layoutX="27.0" layoutY="158.0" prefHeight="34.0" prefWidth="544.0"
+              style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css"
+              text="medic_firstname"/>
+   <TextField fx:id="medic_textfield_lastname" layoutX="27.0" layoutY="201.0" prefHeight="34.0" prefWidth="544.0"
+              style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css"
+              text="medic_lastname"/>
+   <TextField fx:id="medic_textfield_address" layoutX="27.0" layoutY="244.0" prefHeight="34.0" prefWidth="544.0"
+              style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css"
+              text="medic_address"/>
+   <TextField fx:id="medic_textfield_phone" layoutX="27.0" layoutY="287.0" prefHeight="34.0" prefWidth="544.0"
+              style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css"
+              text="medic_phone"/>
+   <Button layoutX="27.0" layoutY="422.0" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="53.0"
+           prefWidth="234.0" styleClass="button-delete" stylesheets="@../../../../css/app.css" text="Supprimer">
+      <cursor>
+         <Cursor fx:constant="HAND"/>
+      </cursor>
+   </Button>
+   <Button layoutX="337.0" layoutY="422.0" mnemonicParsing="false" onAction="#validateButtonClicked" prefHeight="53.0"
+           prefWidth="234.0" styleClass="button-validate" stylesheets="@../../../../css/app.css" text="Valider">
+      <cursor>
+         <Cursor fx:constant="HAND"/>
+      </cursor>
+   </Button>
+   <ComboBox fx:id="medic_choice_speciality" layoutX="27.0" layoutY="329.0" prefHeight="34.0" prefWidth="544.0"
+             style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css"/>
+   <ComboBox fx:id="medic_choice_department" layoutX="27.0" layoutY="371.0" prefHeight="34.0" prefWidth="544.0"
+             style="-fx-font-size: 16;" styleClass="nunito-regular" stylesheets="@../../../../css/app.css"/>
 </AnchorPane>
